<resources>
    <string name="app_name">Installer</string>
    <string name="action_settings">Settings</string>
    <string name="str_server_error_try_again">Server connection error. Please try again.</string>
    <string name="str_server_error_someting_wrong">Something went wrong. Please try again.</string>
    <string name="str_no_more_data_found">No more data found.</string>
    <string name="str_no_internet_connection">No internet connection.</string>
    <string name="str_ok">OK</string>
    <string name="str_report">Report</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_done">Done</string>
    <string name="str_search">Search here by Vessel Name</string>
    <string name="str_back">Back</string>
    <string name="str_next">Next</string>
    <string name="str_go_back">Go Back</string>
    <string name="str_choose_option">Choose Option</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_view_photo">View Photo</string>
    <string name="str_submit">Submit</string>
    <string name="str_send">Send</string>
    <string name="str_view">View</string>
    <string name="str_share">Share</string>
    <string name="str_save">Save</string>
    <string name="str_start">Start</string>
    <string name="str_stop">Stop</string>
    <string name="str_delete">Delete</string>
    <string name="str_camera">Camera</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_call">Call</string>
    <string name="str_logout">Logout</string>
    <string name="str_remove">Remove</string>
    <string name="str_press_back_again">Please press again to exit.</string>
    <string name="str_exit_confirmation">Are you sure want to exit?</string>
    <string name="str_back_confirmation">Are you sure want to exit without save?</string>
    <string name="str_logout_confirmation">Are you sure want to logout?</string>
    <string name="str_logout_session_expired">Your session is expired. please login first.</string>
    <string name="str_report_submitted">Report has been saved successfully but not submitted to server because of No internet connection. Please sync it later when internet available.</string>
    <string name="error_occurred">An unexpected error occurred will solve all of your troubles.</string>
    <string name="error_details">Error details:</string>
    <string name="unknown_exception">Unknown exception</string>
    <string name="restart_app">Open App Again</string>
    <string name="activity_main_menu_dashboard">Install</string>
    <string name="activity_main_menu_setting">Setting</string>
    <string name="activity_main_menu_history">History</string>
    <string name="activity_main_menu_help">Help</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_sign_up_name">Name</string>
    <string name="str_sign_up_business_name">Business name</string>
    <string name="str_sign_up_mobile_no">Mobile no.</string>
    <string name="str_sign_up_email_address">Email</string>
    <string name="str_sign_up_address">Address</string>
    <string name="str_sign_up_enter_name">Enter username</string>
    <string name="str_sign_up_enter_business_name">Enter business name</string>
    <string name="str_sign_up_enter_email_address">Enter email address</string>
    <string name="str_sign_up_enter_valid_email_address">Enter valid email address</string>
    <string name="str_sign_up_enter_mobile_no">Enter your mobile no</string>
    <string name="str_sign_up_enter_valid_mobile_no">Enter valid mobile no</string>
    <string name="str_sign_up_enter_address">Enter address</string>
    <string name="str_sign_up_enname">Please enter username</string>
    <string name="str_register">Register</string>
    <string name="str_profile_updated_success">Profile updated successfully.</string>
    <string name="str_sign_up_already_account">Already account? SignIn here</string>
    <string name="str_sign_up_i_agree">I agree to </string>
    <string name="str_sign_up_terms_condition">Terms &amp; Condition</string>
    <string name="str_sign_up_agree_terms_condition">Please agree to terms and condition</string>
    <string name="str_sign">Sign In</string>
    <string name="str_login_username">Username</string>
    <string name="str_login_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_login_forgot_password">Forgot password?</string>
    <string name="str_login_enter_password">Please enter your password</string>
    <string name="str_password_link">Your password sent successfully. please check your mobile no.</string>
    <string name="str_login_dont_account">Don\'t have an account? Signup here</string>
    <string name="str_login_remember_pw">Remember Me</string>
    <string name="str_forgot_password_lbl">Enter your registered email to get password</string>
    <string name="str_verify_account">Verify Account</string>
    <string name="str_verify_account_verify">Submit</string>
    <string name="str_verify_account_enter_pin">Please enter 4 digt pin.</string>
    <string name="str_verify_account_lable_pin">Enter your 4 digit verification code which sent to your email id to verify your account.</string>
    <string name="str_verify_account_not_receive_otp">Didn\'t receive the OTP?</string>
    <string name="str_verify_account_resend_otp">Resend OTP</string>
    <string name="str_verify_account_confirm_resend_otp">Are you sure want resend OTP?</string>
    <string name="str_set_password">Set Password</string>
    <string name="str_set_password_conf_pw">Confirm Password</string>
    <string name="str_set_password_enter_conf_pw">Please enter confirm password</string>
    <string name="str_set_password_pw_not_match">Password and confirm password does not match.</string>
    <string name="str_set_password_signup_success">Your account has been created successfully. Please login with your credentials.</string>
    <string name="str_dashboard_welcome">Welcome %1$s</string>
    <string name="str_dashboard_total_installation">Total Installation : %1$s</string>
    <string name="str_dashboard_total_installations">Total Installations : %1$s</string>
    <string name="str_dashboard_title">Dashboard</string>
    <string name="str_dashboard_menu_new_installation">Installation</string>
    <string name="str_dashboard_menu_uninstall">Uninstall</string>
    <string name="str_dashboard_menu_unsynced">Unsynced</string>
    <string name="str_dashboard_menu_install_guide">Install Guide</string>
    <string name="str_dashboard_menu_inspection">Inspection</string>
    <string name="str_dashboard_menu_legal_docs">Legal Docs</string>
    <string name="str_update_profile">User Profile</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_change_pw_current_pw">Current Password</string>
    <string name="str_change_pw_current_new">New Password</string>
    <string name="str_change_pw_enter_current_pw">Please enter current password</string>
    <string name="str_change_pw_enter_new_pw">Please enter new password</string>
    <string name="str_change_pw_enter_conf_pw">Please enter confirm password</string>
    <string name="str_change_pw_pw_not_match">New password and confirm password does not match.</string>
    <string name="str_settings">Settings</string>
    <string name="str_settings_select_language">Select language</string>
    <string name="str_settings_select_date_format">Change date format</string>
    <string name="str_settings_change_password">Change password</string>
    <string name="str_settings_contact_us">Contact us</string>
    <string name="str_settings_logout">Logout</string>
    <string name="str_frg_one_edit_installation">Edit Installation</string>
    <string name="str_frg_one_scan_device">Scan Device</string>
    <string name="str_frg_one_device_type">Device Type</string>
    <string name="str_frg_one_select_device_type">Select Device Type</string>
    <string name="str_frg_one_test_device">Test Device</string>
    <string name="str_frg_one_get_device_id">Please get device id first by using Scan device option.</string>
    <string name="str_frg_one_select_device_msg">Please select device type.</string>
    <string name="str_frg_one_last_install_location">Last location</string>
    <string name="str_frg_one_last_install_date">Last install date</string>
    <string name="str_frg_two_latitude">Latitude</string>
    <string name="str_frg_two_longitude">Longitude</string>
    <string name="str_frg_two_vessel_asset_title">Vessel / Asset</string>
    <string name="str_frg_two_vessel_asset_select_name">Enter Vessel Name</string>
    <string name="str_frg_two_vessel_asset_enter_vessel_reg_no">Enter vessel registration no</string>
    <string name="str_frg_two_vessel_asset_name">Vessel Name</string>
    <string name="str_frg_two_registration_no">Registration No.</string>
    <string name="str_frg_two_select_power">Select power source</string>
    <string name="str_frg_two_device_install_location">Device install location eg. up mast</string>
    <string name="str_frg_two_add_installation_photo">Add Installation Photos</string>
    <string name="str_frg_two_enter_vessel_name">Enter vessel name</string>
    <string name="str_frg_two_select_ins_date">Please set date and time.</string>
    <string name="str_frg_two_enter_latitude">Please enter latitude.</string>
    <string name="str_frg_two_enter_longitude">Please enter longitude.</string>
    <string name="str_frg_two_select_country">Please select country.</string>
    <string name="str_frg_two_select_vessel_asset_select_name">Please enter Vessel name.</string>
    <string name="str_frg_two_select_vessel_asset_reg_no">Please enter Registration no.</string>
    <string name="str_frg_two_select_device_power">Please select power source</string>
    <string name="str_frg_two_enter_location">Please enter device install location.</string>
    <string name="str_frg_two_add_missing_image">There is some photos missing for Installation. Please check and add missing photo.</string>
    <string name="str_frg_three_owner_name">Owner name</string>
    <string name="str_frg_three_owner_address_line_one">Address Line</string>
    <string name="str_frg_three_owner_address_line_two">Address Line 2</string>
    <string name="str_frg_three_owner_city">Owner City</string>
    <string name="str_frg_three_owner_state">Owner State</string>
    <string name="str_frg_three_owner_pincode">Owner Pincode</string>
    <string name="str_frg_three_owner_email">Owner Email</string>
    <string name="str_frg_three_owner_phone_no">Owner Phone Number</string>
    <string name="str_frg_three_enter_owner_name">Please enter owner name</string>
    <string name="str_frg_three_enter_owner_address">Please enter owner address.</string>
    <string name="str_frg_three_enter_owner_city">Please enter owner city.</string>
    <string name="str_frg_three_enter_owner_state">Please enter owner state.</string>
    <string name="str_frg_three_enter_owner_zipcode">Please enter owner zipcode.</string>
    <string name="str_frg_three_enter_owner_email">Please enter owner email address.</string>
    <string name="str_frg_three_enter_owner_phonono">Please enter owner mobile number.</string>
    <string name="str_frg_three_installation_successfully">Installation submitted successfully.</string>
    <string name="str_scan_device">Scan Device</string>
    <string name="str_scan_device_enter_manually">Enter Manually</string>
    <string name="str_scan_device_imei_no">Device IMEI No</string>
    <string name="str_scan_device_enter_imei_no">Enter 15 digits IMEI no</string>
    <string name="str_scan_device_enter_sixteen_digit_no">This is not valid IMEI code</string>
    <string name="str_scan_device_sixteen_digit_no">This IMEI code is invalid. It should be 15 digits.</string>
    <string name="str_scan_device_hint_imei_no">IMEI No</string>
    <string name="str_frg_three_sign_here">Tap here for owner sign</string>
</resources>