<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_inspection_two_relativelayout_bottomLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fragment_inspection_two_editext_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_frg_three_owner_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:paddingBottom="@dimen/_15sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhiteLight"
                    android:textSize="@dimen/_12sdp"
                    android:theme="@style/MyEditTextWhite" />

                <EditText
                    android:id="@+id/fragment_inspection_two_editext_address_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_frg_three_owner_address_line_one"
                    android:imeOptions="actionNext"
                    android:inputType="text|textNoSuggestions"
                    android:paddingBottom="@dimen/_15sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhiteLight"
                    android:textSize="@dimen/_12sdp"
                    android:theme="@style/MyEditTextWhite" />

                <EditText
                    android:id="@+id/fragment_inspection_two_editext_owner_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_frg_three_owner_city"
                    android:imeOptions="actionNext"
                    android:inputType="text|textNoSuggestions"
                    android:paddingBottom="@dimen/_15sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhiteLight"
                    android:textSize="@dimen/_12sdp"
                    android:theme="@style/MyEditTextWhite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/fragment_inspection_two_editext_owner_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/str_frg_three_owner_state"
                        android:imeOptions="actionNext"
                        android:inputType="text|textNoSuggestions"
                        android:paddingBottom="@dimen/_15sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:paddingTop="@dimen/_15sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhiteLight"
                        android:textSize="@dimen/_12sdp"
                        android:theme="@style/MyEditTextWhite" />

                    <EditText
                        android:id="@+id/fragment_inspection_two_editext_owner_zipcode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:hint="@string/str_frg_three_owner_pincode"
                        android:imeOptions="actionNext"
                        android:inputType="text|textNoSuggestions"
                        android:paddingBottom="@dimen/_15sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:paddingTop="@dimen/_15sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhiteLight"
                        android:textSize="@dimen/_12sdp"
                        android:theme="@style/MyEditTextWhite" />
                </LinearLayout>

                <EditText
                    android:id="@+id/fragment_inspection_two_editext_owner_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_frg_three_owner_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:paddingBottom="@dimen/_15sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhiteLight"
                    android:textSize="@dimen/_12sdp"
                    android:theme="@style/MyEditTextWhite" />


                <EditText
                    android:id="@+id/fragment_inspection_two_editext_owner_phoneno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:hint="@string/str_frg_three_owner_phone_no"
                    android:imeOptions="actionDone"
                    android:inputType="number|textNoSuggestions"
                    android:maxLength="15"
                    android:paddingBottom="@dimen/_15sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhiteLight"
                    android:textSize="@dimen/_12sdp"
                    android:theme="@style/MyEditTextWhite" />

                <RelativeLayout
                    android:id="@+id/fragment_inspection_two_relativelayout_sign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_login_bg_shadow"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/fragment_inspection_two_txt_signature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="@dimen/_8sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:paddingTop="@dimen/_8sdp"
                        android:text="@string/str_frg_three_sign_here"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:id="@+id/fragment_inspection_two_imageview_signature"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_below="@+id/fragment_inspection_two_txt_signature"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:scaleType="fitCenter" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_inspection_two_relativelayout_bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAppTheme">

        <Button
            android:id="@+id/backBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:text="@string/str_back"
            android:textColor="@color/colorWhite"
            android:visibility="visible" />

        <Button
            android:id="@+id/nextBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:padding="@dimen/_5sdp"
            android:text="@string/str_next"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</RelativeLayout>
