<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@color/colorAppTheme"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:text="@string/str_scan_device_imei_no"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_15sdp">

                <TextView
                    android:id="@+id/popup_imei_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:elevation="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_scan_device_enter_imei_no"
                    android:textColor="@color/colorGrayText"
                    android:textSize="@dimen/_12sdp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/str_scan_device_hint_imei_no"
                    android:theme="@style/MyEditTextBlack">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/popup_imei_edittext_imei_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number|textNoSuggestions"
                        android:maxLength="15"
                        android:digits="1234567890"
                        android:maxLines="1"
                        android:textColor="@color/colorAppTheme"
                        android:textColorHint="@color/colorGrayText"
                        android:textSize="@dimen/_14sdp" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/popup_imei_buttton_cancal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorButtonBg"
                        android:text="@string/str_cancel"
                        android:textColor="@color/colorAppTheme"
                        android:textSize="@dimen/_14sdp" />

                    <Button
                        android:id="@+id/popup_imei_buttton_ok"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:background="@color/colorButtonBg"
                        android:text="@string/str_ok"
                        android:textColor="@color/colorAppTheme"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
