<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_change_password_relativelayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/ic_login_bg_shadow"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/str_change_pw_current_pw"
            android:theme="@style/MyEditTextWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhiteLight">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/fragment_change_password_edittext_current_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword|textNoSuggestions"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteLight"
                android:textSize="@dimen/_14sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/str_change_pw_current_new"
            android:theme="@style/MyEditTextWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhiteLight">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/fragment_change_password_edittext_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword|textNoSuggestions"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteLight"
                android:textSize="@dimen/_14sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/str_set_password_conf_pw"
            android:theme="@style/MyEditTextWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhiteLight">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/fragment_change_password_edittext_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword|textNoSuggestions"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteLight"
                android:textSize="@dimen/_14sdp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/fragment_change_password_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/ic_button_bg"
            android:text="@string/str_save"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>
</RelativeLayout>
